# bin_picking

./: README.md
ensaio_correspondencia_3DSC/: CMakeLists.txt~
ensaio_correspondencia_3DSC/models/: 10.pcd  19.pcd  21.pcd  22.pcd  37.pcd  5.pcd  6.pcd
ensaio_correspondencia_3DSC/src/: CMakeLists.txt  correspondencia_3DSC  correspondencia_3DSC.cpp  correspondencia_3DSC.cpp~  correspondencia_multivista_3DSC  modelviewpoint.cpp~
ensaio_correspondencia_FPFH/: CMakeLists.txt  CMakeLists.txt~  box.STL  box3.ply  box5.ply
ensaio_correspondencia_FPFH/062models089/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  (+16 more)
ensaio_correspondencia_PFH/: CMakeLists.txt  CMakeLists.txt~
ensaio_correspondencia_RSD/: CMakeLists.txt  CMakeLists.txt~
ensaio_correspondencia_SHOT/: CMakeLists.txt  CMakeLists.txt~
ensaio_correspondencia_Spin/: CMakeLists.txt  CMakeLists.txt~
ensaio_correspondencia_USC/: CMakeLists.txt
ensaio_identificacao_caixa/: CMakeLists.txt  test3.pcd
ensaio_identificacao_caixa/src/: Atest_pecasfinal.pcd  CMakeCache.txt  Makefile  cmake_install.cmake  segmentation  segmentation.cpp  segmentation.cpp~
ensaio_virtual_scanner/: boxNblender.ply
my_virtual_scanner/: CMakeLists.txt
my_virtual_scanner/src/: CMakeCache.txt  Makefile  bolagrande.ply  cilindro.ply  cmake_install.cmake  provete2.STL  provete2.ply  virtual_scanner  virtual_scanner.cpp  virtual_scanner.cpp~
my_virtual_scanner/src/Aprovete2.ply_output/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  38.pcd  39.pcd  4.pcd  40.pcd  41.pcd  5.pcd  6.pcd  7.pcd  (+2 more)
my_virtual_scanner/src/Bprovete2.ply_output/: 1.pcd  10.pcd  12.pcd  16.pcd  17.pcd  21.pcd  24.pcd  25.pcd  27.pcd  28.pcd  29.pcd  3.pcd  32.pcd  33.pcd  34.pcd  36.pcd  37.pcd  38.pcd  4.pcd  40.pcd  7.pcd
my_virtual_scanner/src/provete2.ply_output/: 1.pcd  14.pcd  18.pcd  30.pcd  31.pcd  32.pcd  35.pcd  38.pcd  40.pcd  9.pcd
(+213 files in other folders)
